seperated-yamls/react-client-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-redux-app
  labels:
    app: react-redux-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-redux-app
  template:
    metadata:
      labels:
        app: react-redux-app
    spec:
      containers:
        - name: react-redux-app
          image: webmasterdevlin/redux-k8s:0.0.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "20m"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: react-redux-service
spec:
  type: ClusterIP
  selector:
    app: react-redux-app

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
