seperated-yamls/minikube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: hello.world # Ingress will expect this url.
   - http:
      paths: # NodePort is not needed here
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-redux-service
            port:
              number: 8080
      - path: /weatherforecast
        pathType: Exact
        backend:
          service:
            name: aspnet-service
            port:
              number: 8081
